# RoboMaster-homework

homework1/apple-recognize/: main.cpp
homework1/armor-detect/: ArmorBox.cpp  ArmorBox.h  CMakeLists.txt  main.cpp
homework1/plate-recognize/: main.cpp
homework2/calibrateCamera/: CMakeLists.txt  calibrate.cpp  calibrate.hpp  main.cpp
homework2/dynamicCamera/: camera.cpp  camera.hpp  main.cpp
homework2/dynamicCamera/.cache/clangd/index/: camera.cpp.93C7D453BD12F5CB.idx  camera.hpp.2F314A1AF788DFC1.idx  main.cpp.BBAFB31D0FE3C9D3.idx
homework2/world2camera/: CMakeLists.txt  camera.cpp  camera.hpp  main.cpp
homework2/world2camera/.cache/clangd/index/: camera.cpp.F3D833DEA27D6C1E.idx  camera.hpp.D422F583CE0DDEC5.idx  main.cpp.DF37B0F1E0B39707.idx
homework3/KalmanFilter/: CMakeLists.txt  kalman.cpp  kalman.h  main.cpp
homework3/KalmanFilter/.cache/clangd/index/: kalman.cpp.DB7A1E21634CCA8D.idx  kalman.h.AE40500DB50421F0.idx  main.cpp.10CEBFCEC2D2F0B0.idx
homework3/pnp/: CMakeLists.txt  main.cpp
homework3/pnp/.cache/clangd/index/: main.cpp.70888AB9B9B36A3F.idx  main2.cpp.6C918C78BF4A5C8C.idx
